fixed entered words position staying bold and modal squashed by input keyboard bugs

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -47,6 +47,7 @@ input {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
 }
 
 .header {
@@ -229,6 +230,7 @@ input {
     background-color: white;
     width: 40%;
     height: 25%;
+    min-height: 250px;
     border-radius: 6px;
     display: flex;
     flex-direction: column;
@@ -291,7 +293,10 @@ input {
 @media screen
  
 and (max-device-width: 400px) {
-    html {
+    html, body {
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0;
         min-width: 400px;
     }
     
